Added missing CSRF token tag

--- a/FrontEnd/timeline.html
+++ b/FrontEnd/timeline.html
@@ -59,6 +59,7 @@
 						<img class="card-img-top" alt="Card image cap">
 						<div class="card-body">
 							<h4 class="card-title">Card title</h4>
+							<p class="text-left text-muted">Enter your content here</p>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 							<a href="#" class="btn btn-primary">Go somewhere</a>
 						</div>
